--- a/tp4/Tutorial.ipynb
+++ b/tp4/Tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:620e7256649f0e210def4c3de6899f462c83342c3664aa60934e8b7420d56356"
+  "signature": "sha256:ba6148810272d40e5c246480b781285261aefdc23871156ad4dab896da117948"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
       "# deux technologies a travers un exemple minimal.\n",
       "\n",
       "import xml.etree.ElementTree as etree\n",
-      "import urllib\n",
+      "import urllib.request\n",
       "import json\n",
       "\n",
       "def parse_xml():\n",
@@ -79,7 +79,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -112,23 +112,22 @@
         "Voici des liens vers des choses cute:\n",
         "\n",
         "http://i.imgur.com/Szp9Kxj.jpg\n",
-        "http://i.imgur.com/OiKbydl.jpg\n",
         "http://i.imgur.com/5Vlh8Ds.jpg\n",
+        "http://i.imgur.com/OiKbydl.jpg\n",
+        "http://i.imgur.com/jDntzLl.jpg\n",
         "http://i.imgur.com/KjS4XvN.jpg\n",
-        "http://i.imgur.com/KZsWSRE.jpg\n",
-        "http://i.imgur.com/EJkU6FD.jpg\n",
-        "https://i.imgur.com/DumTLUa.jpg\n",
-        "http://i.imgur.com/cIOofg2.jpg\n",
-        "http://i.imgur.com/yUyAmTx.jpg\n",
-        "http://i.imgur.com/aNDk1cN.jpg\n",
-        "http://i.imgur.com/AslHRrc.jpg\n",
-        "http://i.imgur.com/C44bvz8.jpg\n",
         "https://i.imgur.com/LxEBx9A.jpg\n",
-        "http://i.imgur.com/JerVqAw.jpg\n"
+        "http://i.imgur.com/KZsWSRE.jpg\n",
+        "http://i.imgur.com/aNDk1cN.jpg\n",
+        "http://i.imgur.com/lyA7sJ4.jpg\n",
+        "http://i.imgur.com/EJkU6FD.jpg\n",
+        "http://imgur.com/UHCRxXe.jpg\n",
+        "http://i.imgur.com/JerVqAw.jpg\n",
+        "http://i.imgur.com/nEH9qhZ.jpg\n"
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -136,7 +135,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     }
    ],
    "metadata": {}
